# lakeshire

./: .pre-commit-config.yaml  README.md
addon/: Hooks.lua  Lakeshire.lua  Lakeshire.toc  Makefile  PixelInfo.lua  generate.sh  readme.md
addon/lua-pb/: CHANGES.txt  fakerequire.lua  lua-pb.toc  lua-pb.xml  pb-wow.lua  saveast.lua
addon/lua-pb/pb/: handlers.lua  standard.lua  utils.lua
addon/lua-pb/pb/proto/: grammar.lua  parser.lua  scanner.lua  util.lua
addon/lua-pb/pb/standard/: buffer.lua  dump.lua  message.lua  pack.lua  repeated.lua  unknown.lua  unpack.lua  zigzag.lua
addon/protos-dist/: Lakeshire.lua
addon/textures/: pixel.tga
bot/: .gitignore  Cargo.toml  buf.gen.yaml  package.json  vite.config.js
bot/crates/lakeshire-cli/: Cargo.toml
bot/crates/lakeshire-cli/src/: main.rs
bot/crates/lakeshire-cli/src/commands/: bench.rs  face.rs  mod.rs  parse.rs  snap.rs
bot/crates/lakeshire-core/: Cargo.toml  build.rs
bot/crates/lakeshire-core/src/: lib.rs  scanner.rs  screenshot.rs  serialization.rs
bot/crates/lakeshire-dx/: Cargo.toml  Dioxus.toml  Makefile  README.md  build.rs  tailwind.css
bot/crates/lakeshire-dx/assets/: main.css  tailwind.css
bot/crates/lakeshire-dx/src/: faker.rs  global.rs  main.rs  tasks.rs
bot/crates/lakeshire-dx/src/components/: area_map.rs  mod.rs  plot.rs
bot/crates/lakeshire-dx/src/pages/: debug_page.rs  home_page.rs  mod.rs
bot/crates/lakeshire-tauri/: Cargo.toml  tauri.conf.json
bot/crates/lakeshire-tauri/capabilities/: default.json  desktop.json
bot/crates/lakeshire-tauri/src/: bus.rs  commands.rs  event.rs  faker.rs  lib.rs  main.rs  shortcuts.rs  state.rs
bot/crates/lakeshire-tauri/src/tasks/: active_window.rs  control.rs  event_emitter.rs  mod.rs  scanner.rs
bot/src/: app.html  build.rs
bot/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
bot/src-tauri/capabilities/: default.json
bot/src-tauri/src/: lib.rs  main.rs
bot/src-tauri/src/core/: scanner.rs  screenshot.rs  serialization.rs
bot/src/cli/: main.rs  old_main.rsx
bot/src/core/: dbc.rs  dump.rs  keys.rs  mod.rs  movement.rs  util.rs
bot/src/core/protos/: Lakeshire.rs  mod.rs
bot/src/core/screen/: capture.rs  mod.rs  pixels.rs
bot/src/lib/: events.ts  initialize.ts  shortcuts.ts  state.ts  stores.ts  types.ts
bot/src/lib/components/: AreaMap.svelte  Plot.svelte
bot/src/lib/protos/: Lakeshire_pb.ts
bot/src/routes/: +layout.svelte  +page.svelte  +page.ts  utils.ts
bot/src/routes/debug/: +page.svelte
bot/src/routes/map/: +page.svelte
bot/static/: zones.json
bot/static/protos/: Lakeshire.proto
dbc/: sampling.ipynb
gui/: index.html  package.json
gui/public/zone_images/: download_images.sh
gui/src/: main.tsx  style.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src/components/: EditorMap.tsx  EditorTree.tsx  Navigation.tsx
gui/src/consts/: ZoneData.ts
gui/src/pages/: Editor.tsx  Index.tsx  Settings.tsx
gui/src/types/: zone.ts
lakeshire-py/: codegen.sh  pyproject.toml
lakeshire-py/lakeshire/: Lakeshire_pb2.py  Lakeshire_pb2.pyi  __main__.py  exceptions.py  models.py
lakeshire-py/lakeshire/cli/: __init__.py  plot.py
lakeshire-py/lakeshire/screen/: __init__.py  parsing.py  scanner.py  screenshots.py
lakeshire-py/tests/: test_scanner.py
playground/: Lakeshire_pb2.py  demo.ipynb
protos/: Lakeshire.proto
