[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
lakeshire-core = { path = "crates/lakeshire-core" }
anyhow = "1.0.97"
thiserror = "2.0.12"
enigo = "0.5.0"
prost = "0.14.1"
active-win-pos-rs = "0.9.0"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
