[project]
name = "lakeshire"
version = "0.1.0"
description = "Lakeshire python edition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "mss>=10.0.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "protobuf>=6.31.1",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.7",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "mypy-protobuf>=3.6.0",
    "pytest>=8.4.1",
    "types-protobuf>=6.30.2.20250703",
]
