[package]
name = "lakeshire-tauri"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lakeshire_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["macos-private-api"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-log = "2.6.0"
log = "0.4.27"
lakeshire-core = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
prost = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-window-state = "2.3.0"
